# oaibox-flexric

./: CMakeLists.txt  README.md  blck_lst.txt  flexric.conf
examples/emulator/agent/: CMakeLists.txt  read_setup_ran.c  read_setup_ran.h  sm_gtp.c  sm_gtp.h  sm_kpm.c  sm_kpm.h  sm_mac.c  sm_mac.h  sm_pdcp.c  sm_pdcp.h  sm_rc.c  sm_rc.h  sm_rlc.c  sm_rlc.h  sm_slice.c  sm_slice.h  sm_tc.c  sm_tc.h  test_agent.c
examples/xApp/c/helloworld/: CMakeLists.txt  hw.c
examples/xApp/c/keysight/: CMakeLists.txt  xapp_keysight_kpm_rc.c
examples/xApp/c/monitor/: CMakeLists.txt  xapp_gtp_mac_rlc_pdcp_moni.c  xapp_gtp_moni.c  xapp_kpm_moni.c  xapp_mac_rlc_pdcp_moni.c
examples/xApp/c/slice/: CMakeLists.txt  xapp_slice_moni_ctrl.c
examples/xApp/oaibox/: CMakeLists.txt  oaibox_xapp_ue_measurements.c
src/lib/: CMakeLists.txt  aind_event.h  async_event.h  ind_event.c  ind_event.h  pending_event_ric.c  pending_event_ric.h
src/lib/3gpp/: CMakeLists.txt
src/lib/3gpp/dec/: CMakeLists.txt  dec_en_gnb.h  dec_enb.h  dec_global_enb_id.h  dec_global_gnb_id.c  dec_global_gnb_id.h  dec_global_ng_enb.h  dec_global_ng_ran.h  dec_gnb.h  dec_gnb_cu_up.h  dec_gnb_du.h  dec_ng_enb.h  dec_ng_enb_du.h
src/lib/3gpp/enc/: CMakeLists.txt  enc_en_gnb.h  enc_enb.h  enc_global_enb_id.h  enc_global_gnb_id.c  enc_global_gnb_id.h  enc_global_ng_enb.h  enc_global_ng_ran.h  enc_gnb.c  enc_gnb.h  enc_gnb_cu_up.h  enc_gnb_du.h  enc_ng_enb.c  enc_ng_enb.h  enc_ng_enb_du.h
src/lib/3gpp/ie/: CMakeLists.txt  global_gnb_id.h  s1_setup_response.h  s_nssai.c  s_nssai.h
src/lib/ap/enc/: e2ap_msg_enc_asn.c
src/lib/e2ap/: CMakeLists.txt  README.md  e2_node_connected_wrapper.h  e2_node_connected_xapp_wrapper.h  e2_setup_failure_wrapper.h  e2_setup_request_wrapper.h  e2_setup_response_wrapper.h  e2ap_ap_wrapper.h  e2ap_global_node_id_wrapper.h  e2ap_msg_dec_generic_wrapper.h  e2ap_msg_enc_generic_wrapper.h  e2ap_msg_free_wrapper.h  e2ap_node_comp_interface_type_wrapper.h  e2ap_node_component_config_add_wrapper.h  e2ap_plmn_wrapper.h  e2ap_ran_function_wrapper.h  e2ap_version.h  e42_ric_control_request_wrapper.h  e42_ric_subscription_request_wrapper.h  e42_setup_request_wrapper.h  global_consts_wrapper.h  ric_control_ack_wrapper.h  ric_control_failure_wrapper.h  ric_control_request_wrapper.h  ric_gen_id_wrapper.h  ric_indication_wrapper.h  ric_inidication_wrapper.h  ric_subscription_delete_failure_wrapper.h  ric_subscription_delete_request_wrapper.h  ric_subscription_delete_response_wrapper.h  ric_subscription_failure_wrapper.h  ric_subscription_request_wrapper.h  ric_subscription_response_wrapper.h  type_defs_wrapper.h
src/lib/e2ap/v1_01/: e2ap_ap_asn.c  type_defs.h
src/lib/e2ap/v2_03/: CMakeLists.txt  e2ap_ap.h  e2ap_ap_asn.c  e2ap_ap_asn.h  type_defs.h
src/lib/e2ap/v3_01/: e2ap_ap.h  e2ap_ap_asn.c  type_defs.h
src/lib/e2sm_common_ie/: CMakeLists.txt
src/lib/e2sm_common_ie/3gpp_derived_ie/: CMakeLists.txt  en_gnb.c  en_gnb.h  enb.c  enb.h  eutra_cgi.c  eutra_cgi.h  global_enb_id.c  global_enb_id.h  global_gnb_id.c  global_gnb_id.h  global_ng_enb_id.c  global_ng_enb_id.h  global_ng_ran_node_id.c  global_ng_ran_node_id.h  gnb.c  gnb.h  gnb_cu_up.c  gnb_cu_up.h  gnb_du.c  gnb_du.h  guami.c  guami.h  gummei.c  gummei.h  ng_enb.c  ng_enb.h  ng_enb_du.c  ng_enb_du.h  nr_cgi.c  nr_cgi.h  plmn_identity.c  s_nssai.h
src/lib/e2sm_common_ie/3gpp_derived_ie_dec_asn/: CMakeLists.txt  dec_en_gnb.c  dec_en_gnb.h  dec_enb.c  dec_enb.h  dec_global_enb_id.c  dec_global_enb_id.h  dec_global_gnb_id.c  dec_global_gnb_id.h  dec_global_ng_enb.c  dec_global_ng_enb.h  dec_global_ng_ran.c  dec_global_ng_ran.h  dec_gnb.c  dec_gnb.h  dec_gnb_cu_up.c  dec_gnb_cu_up.h  dec_gnb_du.c  dec_gnb_du.h  dec_ng_enb.c  dec_ng_enb.h  dec_ng_enb_du.c  dec_ng_enb_du.h
src/lib/e2sm_common_ie/3gpp_derived_ie_enc_asn/: CMakeLists.txt  enc_en_gnb.c  enc_enb.c  (+20 more)
src/lib/ep/: e2ap_ep.c  sctp_msg.c  sctp_msg.h
src/lib/msg_hand/: CMakeLists.txt  e2_node_arr.c  e2_node_arr.h  reg_e2_nodes.c  reg_e2_nodes.h
src/lib/sm/: CMakeLists.txt
src/ric/: CMakeLists.txt  asio_ric.c  asio_ric.h  e2_node.h  e2ap_ric.c  e2ap_ric.h  endpoint_ric.c  endpoint_ric.h  generate_setup_failure.c  generate_setup_failure.h  generate_setup_response.c  generate_setup_response.h  map_e2_node_sockaddr.c  map_e2_node_sockaddr.h  msg_handler_ric.c  msg_handler_ric.h  near_ric.c  near_ric.h  near_ric_api.c  near_ric_api.h  not_handler_ric.c
src/ric/iApp/: CMakeLists.txt  asio_iapp.c  e2_node_ric_id.c  e2_node_ric_id.h  e2ap_iapp.c  e2ap_iapp.h  e42_iapp.c  e42_iapp.h  e42_iapp_api.c  e42_iapp_api.h  endpoint_iapp.c  map_ric_id.c  map_ric_id.h  map_xapps_sockaddr.c  map_xapps_sockaddr.h  msg_handler_iapp.c  msg_handler_iapp.h  near_ric_if.h  xapp_ric_id.c  xapp_ric_id.h
src/ric/iApps/: influx.c  redis.c  stdout.c  stdout.h  string_parser.c  string_parser.h
src/sm/kpm_sm_v02.03/: CMakeLists.txt  kpm_sm_agent.c  kpm_sm_id.h  kpm_sm_ric.c
src/sm/kpm_sm_v03.00/: CMakeLists.txt  kpm_sm_agent.c  kpm_sm_agent.h  kpm_sm_id.h  kpm_sm_ric.c
src/sm/kpm_sm_v2.02/: CMakeLists.txt  kpm_sm_agent.c  kpm_sm_ric.c
src/sm/rc_sm/: CMakeLists.txt  README.md  rc_sm_agent.c  rc_sm_agent.h  rc_sm_id.h  rc_sm_ric.c  rc_sm_ric.h
src/xApp/: CMakeLists.txt  act_proc.h  e2_node_arr_xapp.c  e2_node_arr_xapp.h  e2_node_connected_xapp.c  e2_node_connected_xapp.h  e2ap_xapp.c  e2ap_xapp.h  e42_xapp.c  e42_xapp.h  e42_xapp_api.c  e42_xapp_api.h  endpoint_xapp.c  msg_generator_xapp.c  msg_generator_xapp.h  msg_handler_xapp.c  msg_handler_xapp.h  pending_event_xapp.c  pending_event_xapp.h  plugin_agent.c  sm_ran_function.c  sm_ran_function.h  sm_ran_function_def.c  sm_ran_function_def.h
src/xApp/db/: CMakeLists.txt  db.c  db.h
src/xApp/swig/: CMakeLists.txt  swig_wrapper.cpp  swig_wrapper.h  swig_wrapper.i
test/agent-ric/: CMakeLists.txt  test_near_ric.c
test/agent-ric-xapp/: CMakeLists.txt  test_ag_ric_xapp.c
test/encode_decode/e2ap/: CMakeLists.txt
test/sm/kpm_sm/: CMakeLists.txt  fill_rnd_data_kpm.c  main.c
test/sm/rc_sm/: CMakeLists.txt  main.c
test/sm/slice_sm/: CMakeLists.txt  main.c
(+5294 files in other folders)
